06.Ingress/p9-ingress-basic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planet9-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: planet9
  template:
    metadata:
      labels:
        app: planet9
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: planet9
        image: neptunesoftware/planet9
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 0
        resources:
          requests:
            cpu: 1000m
            memory: 1Gi
          limits:
            cpu: 2000m
            memory: 1Gi
        ports:
        - containerPort: 8080
          name: planet9
---
apiVersion: v1
kind: Service
metadata:
  name: planet9-svc
spec:
  selector:
    app: planet9
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 32000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-planet9-service
  labels:
    app: planet9
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: planet9-svc
              servicePort: 8080
